syntax = "proto3";

package calculator;
option go_package="calculatorpb";

// define your messages

// Sum's API Messages

message Sum {
    int32 number1=1;
    int32 number2=2;
}

message CalculatorRequest{
    Sum sum =1;
}
message CalculatorResponse{
    int32 result=1;
}

//Prime API messages 
message PrimeNumberRequest {
    int32 number=1;
}
message PrimeNumberResponse {
    int32 result=1;
}

// Greatest Common Factor messages
message GCFRequest {
    int32 number1=1;
    int32 number2=2;
}

message GCFResponse {
    int32 result=1;
}

// BreakWord messeges 

message BreakWordRequest {
    string word =1;
}

message BreakWordResponse {
    string result=1;    
}
// Letters messages
message LettersRequest {
    string word =1;
}

message LettersResponse {
    string result=1;    
}

service CalculatorService{
    // Calculator Takes in two numbers and returns the sum of them
    rpc Calculator(CalculatorRequest) returns (CalculatorResponse) {};
    // PrimeNUmberDecomposition rpc
    rpc PrimeNumber(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
    // Get the GCF(Greatest Common Factor) of 2 numbers
    rpc GCF(GCFRequest) returns (stream GCFResponse){};
    // break a sentance appart into words
    rpc BreakWord(BreakWordRequest) returns (stream BreakWordResponse){};
    // letters 
    rpc Letters(LettersRequest) returns (stream LettersResponse){};

}





